--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,26 +1,26 @@
 {
-    "extends": "airbnb",
-    "plugins": ["prettier"],
-    "rules": {
-      "prettier/prettier": "error",
-      "no-unused-vars": "warn",
-      "no-console": "off",
-      "func-names": "off",
-      "no-process-exit": "off",
-      "object-shorthand": "off",
-      "class-methods-use-this": "off"
-    },
-    "parserOptions" : {
-      "sourceType" : "module",
-      "ecmaVersion" : 2018
-    },
     "env": {
-      "browser": true,
-      "es6": true,
-      "node": true
+        "browser": true,
+        "es6": true
     },
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended"
+    ],
     "globals": {
-      "Atomics": "readonly",
-      "SharedArrayBuffer": "readonly"
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": 2018,
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react"
+    ],
+    "rules": {
     }
-  }
+}
