--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,10 @@
 {
-    "singleQuote": true
-}
+    "useTabs": false,
+    "printWidth": 100,
+    "tabWidth": 2,
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "jsxBracketSameLine": false,
+    "parser": "flow",
+    "semi": false,
+  }
