--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     }
   },
   "lint-staged": {
-    ".js?(x)": ["prettier --write", "eslint --fix"],
-    ".?(s)css": "stylelint --fix"
+    "*.js?(x)": ["prettier --write", "eslint --fix"],
+    "*.?(s)css": "stylelint --fix"
   }
 }
