--- a/package.json
+++ b/package.json
@@ -59,7 +59,10 @@
     }
   },
   "lint-staged": {
-    "*.js?(x)": ["prettier --write", "eslint --fix"],
+    "*.js?(x)": [
+      "prettier --write",
+      "eslint --fix"
+    ],
     "*.?(s)css": "stylelint --fix"
   }
 }
