--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,6 @@
     "singleQuote": true,
     "trailingComma": "es5",
     "jsxBracketSameLine": false,
-    "parser": "flow",
-    "semi": true
+    "semi": true,
+    "endOfLine": "auto"
   }
