--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
+    "@devexpress/dx-react-core": "2.6.4",
+    "@devexpress/dx-react-chart-material-ui": "2.6.4",
+    "@devexpress/dx-react-chart": "2.6.4",
+    "d3-shape": "^1.3.7",
+    "d3-scale": "^3.2.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
