--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "2.6.4",
+    "@devexpress/dx-react-chart-material-ui": "2.6.4",
+    "@devexpress/dx-react-core": "2.6.4",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
-    "@devexpress/dx-react-core": "2.6.4",
-    "@devexpress/dx-react-chart-material-ui": "2.6.4",
-    "@devexpress/dx-react-chart": "2.6.4",
-    "d3-shape": "^1.3.7",
-    "d3-scale": "^3.2.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "d3-scale": "^3.2.0",
+    "d3-shape": "^1.3.7",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
